--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <main>
       <div class="magazine-text">
         <h1>A special, long article in a newspaper or magazine</h1>
-        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
+        <p>
+          テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
           テキストテキストテキストテキストテキストテキストテキストテキスト
         </p>
       </div>
@@ -36,7 +37,8 @@
         <img src="./assets/pc.png">
         <div class="pc-text">
           <h1>Fashion & Style</h1>
-          <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
+          <p>
+            テキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
             テキストテキストテキストテキストテキストテキストテキストテキスト
           </p>
           <button>ReadMove</button>
@@ -47,15 +49,18 @@
           <img src="./assets/catalog.png" class="catalog-img">
           <div class="catalog-text">
             <p class="title">Catalog</p>
-            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト
             </p>
-            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト
             </p>
-            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト
             </p>
@@ -64,11 +69,13 @@
         <div class="catalog">
           <div class="catalog-text">
             <p class="title">Antique</p>
-            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト
             </p>
-            <p>テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
+            <p>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト</br>
               テキストテキストテキストテキストテキストテキストテキストテキストテキスト
             </p>
@@ -78,5 +85,29 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="footer">
+        <div class="footer-title">
+          <h1>Mag88</h1>
+        </div>
+        <div>
+          <p class="title">タイトル</p>
+          <li>- テキストテキストテキスト</li>
+          <li>- テキストテキストテキスト</li>
+          <li>- テキストテキストテキスト</li>
+          <li>- テキストテキストテキスト</li>
+        </div>
+        <div>
+          <p class="title">タイトルタイトルタイトル</p>
+          <p class="footer-text">
+            テキストテキストテキストテキストテキストテキストテキ</br>
+            テキストテキストテキストテキストテキストテキストテキ</br>
+            テキストテキストテキストテキストテキストテキストテキ</br>
+            テキストテキストテキストテキストテキストテキストテキ</br>
+            テキスト
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </div>
